--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="table-grid">
         <div class="seat">
             <div class="player-name">Player 1</div>
+            <div class="chip-count">2000</div>
             <div class="player">
                     <div class="hand">
                         <div class="card"></div>
@@ -20,13 +21,34 @@
             </div>
         </div>
         <div class="seat">
-            <div class="player"></div>
+            <div class="player-name">Player 2</div>
+            <div class="chip-count">2000</div>
+            <div class="player">
+                    <div class="hand">
+                        <div class="card"></div>
+                        <div class="card"></div>
+                    </div>
+            </div>
+        </div>
+        <div class="seat active">
+            <div class="player-name">Player 3 </div>
+            <div class="chip-count">2000</div>
+            <div class="player">
+                    <div class="hand">
+                        <div class="card"></div>
+                        <div class="card"></div>
+                    </div>
+            </div>
         </div>
         <div class="seat">
-            <div class="player"></div>
-        </div>
-        <div class="seat">
-            <div class="player"></div>
+            <div class="player-name">Player 4</div>
+            <div class="chip-count">2000</div>
+            <div class="player">
+                    <div class="hand">
+                        <div class="card"></div>
+                        <div class="card"></div>
+                    </div>
+            </div>
         </div>
     </div>
 
