--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <div class="table-grid">
-        <div class="seat">
+        <div class="seat active">
+            <div class="test-button">Test</div>
             <div class="player-name">Player 1</div>
             <div class="chip-count">2000</div>
             <div class="player">
@@ -30,7 +31,7 @@
                     </div>
             </div>
         </div>
-        <div class="seat active">
+        <div class="seat">
             <div class="player-name">Player 3 </div>
             <div class="chip-count">2000</div>
             <div class="player">
