--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 <body>
     <div class="table-grid">
         <div class="seat active">
-            <div class="test-button">Test</div>
             <div class="player-name">Player 1</div>
             <div class="chip-count">2000</div>
+            <div class="btn-container">
+                <div class="hit-btn game-btn">Hit</div>
+                <div class="stay-btn game-btn">Stay</div>
+            </div>
             <div class="player">
                     <div class="hand">
                         <div class="card"></div>
