--- a/index.html
+++ b/index.html
@@ -13,44 +13,53 @@
         <div class="seat active">
             <div class="player-name">Player 1</div>
             <div class="chip-count">2000</div>
+            <div class="score"></div>
             <div class="btn-container">
                 <div class="hit-btn game-btn">Hit</div>
                 <div class="stay-btn game-btn">Stay</div>
             </div>
             <div class="player">
                     <div class="hand">
-                        <div class="card"></div>
-                        <div class="card"></div>
                     </div>
             </div>
         </div>
         <div class="seat">
             <div class="player-name">Player 2</div>
             <div class="chip-count">2000</div>
+            <div class="score"></div>
+            <div class="btn-container hide">
+                <div class="hit-btn game-btn">Hit</div>
+                <div class="stay-btn game-btn">Stay</div>
+            </div>
             <div class="player">
                     <div class="hand">
-                        <div class="card"></div>
-                        <div class="card"></div>
                     </div>
             </div>
         </div>
         <div class="seat">
             <div class="player-name">Player 3 </div>
             <div class="chip-count">2000</div>
+            <div class="score"></div>
+            <div class="btn-container hide">
+                <div class="hit-btn game-btn">Hit</div>
+                <div class="stay-btn game-btn">Stay</div>
+            </div>
             <div class="player">
                     <div class="hand">
-                        <div class="card"></div>
-                        <div class="card"></div>
+                        
                     </div>
             </div>
         </div>
         <div class="seat">
             <div class="player-name">Player 4</div>
             <div class="chip-count">2000</div>
+            <div class="score"></div>
+            <div class="btn-container hide">
+                <div class="hit-btn game-btn">Hit</div>
+                <div class="stay-btn game-btn">Stay</div>
+            </div>
             <div class="player">
                     <div class="hand">
-                        <div class="card"></div>
-                        <div class="card"></div>
                     </div>
             </div>
         </div>
