--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="table-grid">
+        <div class="winner hide"></div>
         <div class="seat active">
             <div class="player-name">Player 1</div>
             <div class="chip-count">2000</div>
@@ -53,7 +54,7 @@
         <div class="seat">
             <div class="player-name">Player 4</div>
             <div class="chip-count">2000</div>
-            <div class="score"></div>
+            <div class="score">15</div>
             <div class="btn-container hide">
                 <div class="hit-btn game-btn">Hit</div>
                 <div class="stay-btn game-btn">Stay</div>
