added random player to winner element

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="seat">
             <div class="player-name">Player 4</div>
             <div class="chip-count">2000</div>
-            <div class="score">15</div>
+            <div class="score"></div>
             <div class="btn-container hide">
                 <div class="hit-btn game-btn">Hit</div>
                 <div class="stay-btn game-btn">Stay</div>
