added settimout to nextTurn

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="player-name">Player 1</div>
             <div class="chip-count">2000</div>
             <div class="score"></div>
+            <div class="bust-ele red hide">BUST!</div>
             <div class="btn-container">
                 <div class="hit-btn game-btn">Hit</div>
                 <div class="stay-btn game-btn">Stay</div>
@@ -29,6 +30,7 @@
             <div class="player-name">Player 2</div>
             <div class="chip-count">2000</div>
             <div class="score"></div>
+            <div class="bust-ele red hide">BUST!</div>
             <div class="btn-container hide">
                 <div class="hit-btn game-btn">Hit</div>
                 <div class="stay-btn game-btn">Stay</div>
@@ -42,6 +44,7 @@
             <div class="player-name">Player 3 </div>
             <div class="chip-count">2000</div>
             <div class="score"></div>
+            <div class="bust-ele red hide">BUST!</div>
             <div class="btn-container hide">
                 <div class="hit-btn game-btn">Hit</div>
                 <div class="stay-btn game-btn">Stay</div>
@@ -56,6 +59,7 @@
             <div class="player-name">Player 4</div>
             <div class="chip-count">2000</div>
             <div class="score"></div>
+            <div class="bust-ele red hide">BUST!</div>
             <div class="btn-container hide">
                 <div class="hit-btn game-btn">Hit</div>
                 <div class="stay-btn game-btn">Stay</div>
