started working on play -again element

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="winner hide"></div>
+    <div class="play-again"></div>
     <div class="table-grid">
         
         <div class="seat active">
