added loading msg to playAgain element

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="winner hide"></div>
-    <div class="play-again hide">PLAY AGAIN</div>
+    <div class="play-again hide">Loading...</div>
     <div class="table-grid">
         
         <div class="seat active">
