added chip removal functionality

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <div class="play-again hide">Loading...</div>
     <div class="table-grid">
         
-        <div class="seat active">
+        <div class="seat">
             <div class="player-name">Player 1</div>
             <div class="chip-count">2000</div>
             <div class="score"></div>
             <div class="bust-ele red hide">BUST!</div>
-            <div class="btn-container">
+            <div class="btn-container hide">
                 <div class="hit-btn game-btn">Hit</div>
                 <div class="stay-btn game-btn">Stay</div>
             </div>
