--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <div class="seat">
             <div class="player-name">Player 1</div>
             <div class="chip-count">2000</div>
+            <div class="chip-deduction hide">-50</div>
+            <div class="chip-addition hide">+200</div>
             <div class="score"></div>
             <div class="bust-ele red hide">BUST!</div>
             <div class="btn-container hide">
@@ -30,6 +32,8 @@
         <div class="seat">
             <div class="player-name">Player 2</div>
             <div class="chip-count">2000</div>
+            <div class="chip-deduction hide">-50</div>
+            <div class="chip-addition hide">+200</div>
             <div class="score"></div>
             <div class="bust-ele red hide">BUST!</div>
             <div class="btn-container hide">
@@ -44,6 +48,8 @@
         <div class="seat">
             <div class="player-name">Player 3 </div>
             <div class="chip-count">2000</div>
+            <div class="chip-deduction hide">-50</div>
+            <div class="chip-addition hide">+200</div>
             <div class="score"></div>
             <div class="bust-ele red hide">BUST!</div>
             <div class="btn-container hide">
@@ -59,6 +65,8 @@
         <div class="seat">
             <div class="player-name">Player 4</div>
             <div class="chip-count">2000</div>
+            <div class="chip-deduction hide">-50</div>
+            <div class="chip-addition hide">+200</div>
             <div class="score"></div>
             <div class="bust-ele red hide">BUST!</div>
             <div class="btn-container hide">
