--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
         <div class="seat">
             <div class="player-name">Player 1</div>
             <div class="chip-count">2000</div>
-            <div class="chip-deduction hide">-55</div>
-            <div class="chip-addition hide">+220</div>
+            <div class="chip-deduction hide">-75</div>
+            <div class="chip-addition hide">+300</div>
+            <div class="bust-text hide">BUST!</div>
             <div class="score"></div>
-            <div class="bust-ele red hide">BUST!</div>
+            <div class="bust-ele red hide"></div>
             <div class="btn-container hide">
                 <div class="hit-btn game-btn">Hit</div>
                 <div class="stay-btn game-btn">Stay</div>
@@ -32,10 +33,11 @@
         <div class="seat">
             <div class="player-name">Player 2</div>
             <div class="chip-count">2000</div>
-            <div class="chip-deduction hide">-55</div>
-            <div class="chip-addition hide">+220</div>
+            <div class="chip-deduction hide">-75</div>
+            <div class="chip-addition hide">+300</div>
+            <div class="bust-text hide">BUST!</div>
             <div class="score"></div>
-            <div class="bust-ele red hide">BUST!</div>
+            <div class="bust-ele red hide"></div>
             <div class="btn-container hide">
                 <div class="hit-btn game-btn">Hit</div>
                 <div class="stay-btn game-btn">Stay</div>
@@ -48,10 +50,11 @@
         <div class="seat">
             <div class="player-name">Player 3 </div>
             <div class="chip-count">2000</div>
-            <div class="chip-deduction hide">-55</div>
-            <div class="chip-addition hide">+220</div>
+            <div class="chip-deduction hide">-75</div>
+            <div class="chip-addition hide">+300</div>
+            <div class="bust-text hide">BUST!</div>
             <div class="score"></div>
-            <div class="bust-ele red hide">BUST!</div>
+            <div class="bust-ele red hide"></div>
             <div class="btn-container hide">
                 <div class="hit-btn game-btn">Hit</div>
                 <div class="stay-btn game-btn">Stay</div>
@@ -65,10 +68,11 @@
         <div class="seat">
             <div class="player-name">Player 4</div>
             <div class="chip-count">2000</div>
-            <div class="chip-deduction hide">-55</div>
-            <div class="chip-addition hide">+220</div>
+            <div class="chip-deduction hide">-75</div>
+            <div class="chip-addition hide">+300</div>
+            <div class="bust-text hide">BUST!</div>
             <div class="score"></div>
-            <div class="bust-ele red hide">BUST!</div>
+            <div class="bust-ele red hide"></div>
             <div class="btn-container hide">
                 <div class="hit-btn game-btn">Hit</div>
                 <div class="stay-btn game-btn">Stay</div>
