--- a/login.html
+++ b/login.html
@@ -15,8 +15,15 @@
         <label>Username</label>
         <input class="user-name">
         <label>Password</label>
-
         <input class="password">
+        <div class="login-btns">
+            <button id="login-btn">
+                LOGIN
+            </button>
+            <button id="create-account-btn">
+                CREATE ACCOUNT
+            </button>
+        </div>
     </form>
 </body>
 </html>
