--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-quiv="X-UA Compatible" content="ie-edge">
-	<title>Blackjack Card Game</title>
+	<title>Login</title>
 	<link href="styles.css" rel="stylesheet">
 	<script src="script.js" defer></script>
 </head>
