--- a/lobby.html
+++ b/lobby.html
@@ -36,5 +36,14 @@
     </div>
     <div class="seperator-strip"></div>
     <div class="tables-header-strip">Tables</div>
+    <div class="tables-grid">
+        <div class="table"></div>  
+        <div class="table"></div> 
+        <div class="table"></div> 
+        <div class="table"></div> 
+        <div class="table"></div> 
+        <div class="table"></div> 
+        <div class="table"></div> 
+        <div class="table"></div>   
 </body>
 </html>
