added table info to tables

--- a/lobby.html
+++ b/lobby.html
@@ -37,13 +37,175 @@
     <div class="seperator-strip"></div>
     <div class="tables-header-strip">Tables</div>
     <div class="tables-grid">
-        <div class="table"></div>  
-        <div class="table"></div> 
-        <div class="table"></div> 
-        <div class="table"></div> 
-        <div class="table"></div> 
-        <div class="table"></div> 
-        <div class="table"></div> 
-        <div class="table"></div>   
+        <div class="table">
+            <div class="table-facts">
+                <div class="table-info table-stakes">Stakes: <b>20/40</b></div>
+                <div class="table-info table-players">Players: <b>1/4</b></div>
+                <div class="table-info table-coin">
+                <text>Coin:</text>
+                <div class="coin-icon"><img src="bitcoin.png"></div>
+                </div>
+            </div>
+            <div class="seat-grid">
+                <div class="none"></div>
+                <div class="lobby-seat white"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+            </div>
+        </div>  
+        <div class="table">
+            <div class="table-facts">
+                <div class="table-info table-stakes">Stakes: <b>20/40</b></div>
+                <div class="table-info table-players">Players: <b>1/4</b></div>
+                <div class="table-info table-coin">
+                <text>Coin:</text>
+                <div class="coin-icon"><img src="bitcoin.png"></div>
+                </div>
+            </div>
+            <div class="seat-grid">
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+            </div>
+        </div>  
+        <div class="table">
+            <div class="table-facts">
+                <div class="table-info table-stakes">Stakes: <b>20/40</b></div>
+                <div class="table-info table-players">Players: <b>1/4</b></div>
+                <div class="table-info table-coin">
+                <text>Coin:</text>
+                <div class="coin-icon"><img src="bitcoin.png"></div>
+                </div>
+            </div>
+            <div class="seat-grid">
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+            </div>
+        </div>  
+        <div class="table">
+            <div class="table-facts">
+                <div class="table-info table-stakes">Stakes: <b>20/40</b></div>
+                <div class="table-info table-players">Players: <b>1/4</b></div>
+                <div class="table-info table-coin">
+                <text>Coin:</text>
+                <div class="coin-icon"><img src="bitcoin.png"></div>
+                </div>
+            </div>
+            <div class="seat-grid">
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+            </div>
+        </div>  
+        <div class="table">
+            <div class="table-facts">
+                <div class="table-info table-stakes">Stakes: <b>20/40</b></div>
+                <div class="table-info table-players">Players: <b>1/4</b></div>
+                <div class="table-info table-coin">
+                <text>Coin:</text>
+                <div class="coin-icon"><img src="bitcoin.png"></div>
+                </div>
+            </div>
+            <div class="seat-grid">
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+            </div>
+        </div>  
+        <div class="table">
+            <div class="table-facts">
+                <div class="table-info table-stakes">Stakes: <b>20/40</b></div>
+                <div class="table-info table-players">Players: <b>1/4</b></div>
+                <div class="table-info table-coin">
+                <text>Coin:</text>
+                <div class="coin-icon"><img src="bitcoin.png"></div>
+                </div>
+            </div>
+            <div class="seat-grid">
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+            </div>
+        </div>  
+        <div class="table">
+            <div class="table-facts">
+                <div class="table-info table-stakes">Stakes: <b>20/40</b></div>
+                <div class="table-info table-players">Players: <b>1/4</b></div>
+                <div class="table-info table-coin">
+                <text>Coin:</text>
+                <div class="coin-icon"><img src="bitcoin.png"></div>
+                </div>
+            </div>
+            <div class="seat-grid">
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+            </div>
+        </div>  
+        <div class="table">
+            <div class="table-facts">
+                <div class="table-info table-stakes">Stakes: <b>20/40</b></div>
+                <div class="table-info table-players">Players: <b>1/4</b></div>
+                <div class="table-info table-coin">
+                <text>Coin:</text>
+                <div class="coin-icon"><img src="bitcoin.png"></div>
+                </div>
+            </div>
+            <div class="seat-grid">
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+                <div class="lobby-seat"></div>
+                <div class="none"></div>
+            </div>
+        </div>  
+   
+    
 </body>
 </html>
