added observe button to tables

--- a/lobby.html
+++ b/lobby.html
@@ -52,11 +52,12 @@
                 <div class="none"></div>
                 <div class="lobby-seat"></div>
                 <div class="none"></div>
-                <div class="lobby-seat"></div>
+                <div class="lobby-seat white"></div>
                 <div class="none"></div>
-                <div class="lobby-seat"></div>
+                <div class="lobby-seat white"></div>
                 <div class="none"></div>
             </div>
+            <div class="observe-button">OBSERVE</div>
         </div>  
         <div class="table">
             <div class="table-facts">
@@ -78,6 +79,7 @@
                 <div class="lobby-seat"></div>
                 <div class="none"></div>
             </div>
+            <div class="observe-button">OBSERVE</div>
         </div>  
         <div class="table">
             <div class="table-facts">
@@ -99,6 +101,8 @@
                 <div class="lobby-seat"></div>
                 <div class="none"></div>
             </div>
+            <div class="observe-button">OBSERVE</div>
+
         </div>  
         <div class="table">
             <div class="table-facts">
@@ -120,6 +124,7 @@
                 <div class="lobby-seat"></div>
                 <div class="none"></div>
             </div>
+            <div class="observe-button">OBSERVE</div>
         </div>  
         <div class="table">
             <div class="table-facts">
@@ -141,6 +146,7 @@
                 <div class="lobby-seat"></div>
                 <div class="none"></div>
             </div>
+            <div class="observe-button">OBSERVE</div>
         </div>  
         <div class="table">
             <div class="table-facts">
@@ -162,6 +168,7 @@
                 <div class="lobby-seat"></div>
                 <div class="none"></div>
             </div>
+            <div class="observe-button">OBSERVE</div>
         </div>  
         <div class="table">
             <div class="table-facts">
@@ -183,6 +190,7 @@
                 <div class="lobby-seat"></div>
                 <div class="none"></div>
             </div>
+            <div class="observe-button">OBSERVE</div>
         </div>  
         <div class="table">
             <div class="table-facts">
@@ -204,6 +212,7 @@
                 <div class="lobby-seat"></div>
                 <div class="none"></div>
             </div>
+            <div class="observe-button">OBSERVE</div>
         </div>  
    
     
