added account page and linked to lobby

--- a/lobby.html
+++ b/lobby.html
@@ -25,12 +25,14 @@
                 <div class="lobby-chip-count">0000</div>
             </div>
             <div class="lobby-buttons">
-                <button class="lobby-account-button">
+                <a href="./account.html">
+                <div class="lobby-btn lobby-account-button">
                     ACCOUNT
-                </button>
-                <button class="lobby-cashier-button">
+                </div>
+                </a>
+                <div class="lobby-btn lobby-cashier-button">
                     CASHIER
-                </button>
+                </div>
             </div>
         </div>
     </div>
