created account page sidebar

--- a/account.html
+++ b/account.html
@@ -10,6 +10,7 @@
 	<script src="script.js" defer></script>
 </head>
 <body>
+    <div class="top-third">
     <div class="lobby-header">
         <img id="lobby-logo" src="blackjack-logo.png">
         <div class="header-right">
@@ -38,11 +39,22 @@
     <div class="tables-header-strip">
         <text>Account Information</text>
         <div class="tables-header-strip-left">
+            <a href="./lobby.html">
             <div class="home-button">
                 Home
             </div>
+            </a>
             <text>Account</text>
         </div>
+    </div>
+    </div>
+    <div class="middle-third">
+        <div class="sidebar">
+            
+        </div>
+    </div>
+    <div class="bottom-third">
+
     </div>
 </body>
 </html>
