finished password change view

--- a/account.html
+++ b/account.html
@@ -86,19 +86,34 @@
                 </div>
             </div>
             <div class="display-element change-password hide">
-                <div id="change-password-form">
-                    <div class="table-row">
-                        <label>Old Password:</label>
-                        <input>
+                <div class="change-password-form">
+                    <div class="change-password-form-labels">
+                        <div class="table-row">
+                            <text>Current Password:</text>
+                        </div>
+                        <div class="table-row">
+                            <text>New Password:</text>
+                        </div>
+                        <div class="table-row">
+                        <text>Confirm Password:</text>
+                        </div>
                     </div>
-                    <div class="table-row">
-                        <label>New Password:</label>
-                        <input>
+                    <div class="input-fields">
+                        <div class="table-row">
+                            <input>
+                        </div>
+                        <div class="table-row">
+                            
+                            <input>
+                        </div>
+                        <div class="table-row">
+                            <input>
+                        </div>
+                        <div class="table-row button-row">
+                            <button id="change-password-btn">Save</button>
+                        </div>
                     </div>
-                    <div class="table-row">
-                        <label>Confirm Password:</label>
-                        <input>
-                    </div>
+                    
                 </div>
             </div>
         </div>   
