finished creating all account page views and linked to nav

--- a/account.html
+++ b/account.html
@@ -37,14 +37,14 @@
     </div>
     <div class="seperator-strip"></div>
     <div class="tables-header-strip">
-        <text>Account Information</text>
+        <text class="title">Account Information</text>
         <div class="tables-header-strip-left">
             <a href="./lobby.html">
             <div class="home-button">
                 Home
             </div>
             </a>
-            <text>Account</text>
+            <text class="side-title">Account</text>
         </div>
     </div>
     </div>
@@ -116,6 +116,10 @@
                     
                 </div>
             </div>
+            <div class="display-element change-email hide"></div>
+            <div class="display-element change-avatar hide"></div>
+            <div class="display-element account-security hide"></div>
+
         </div>   
     </div>
     </div>
