--- a/login.html
+++ b/login.html
@@ -11,6 +11,13 @@
 <body>  
 </body>
 <div class="create-account-popup hide">
+    <div class="create-account-popup-title">Create Account</div>
+    <div class="create-account-popup-submit-button-row">
+        <div class="popup-button submit-button">SUBMIT</div>
+        <div class="popup-button popup-cancel-button">CANCEL</div>
+
+    </div>
+
     <div class="create-account-form">
         <div class="create-account-form-labels">
             <div class="table-row">
