added login functionality with userauthentication

--- a/login.html
+++ b/login.html
@@ -32,13 +32,14 @@
                 <input name="nickname" class="nick-name">
             </div>
             <div class="table-row">       
-                <input name="password">
+                <input name="password-input" class="password-input">
             </div>
             <div class="table-row">
-                <input name="confirm-password">
+                <input name="confirm-password-input" class="confirm-password">
             </div>
             <div class="table-row">
-                <input name="email">
+                <input name="email-input"
+                class="email-input">
             </div>
             
         </div>
@@ -53,9 +54,9 @@
 <img id="logo" src="blackjack-logo.png">
     <form id="login">
         <label>Username</label>
-        <input class="user-name">
+        <input class="username-login">
         <label>Password</label>
-        <input class="password">
+        <input class="password-login">
         <div class="login-btns">
             <button id="login-btn">
                 LOGIN
